--- a/_sass/custom/module.scss
+++ b/_sass/custom/module.scss
@@ -47,6 +47,8 @@
       font-weight: normal;
       text-align: right;
 
+      width: 10em;
+
       +dd {
         border-top: $border $border-color;
       }
